pyarmor.bug.log
[BUG]: unterminated f-string literal (detected at line 484) (<frozen va_windows_utility_helper>, line 484)

## Command Line
D:\samartha.khare\AppData\Local\Programs\Python\Python312\Scripts\pyarmor gen -O D:/samartha.khare/Desktop/back-up/function_details/existing_bots/bots D:/samartha.khare/Desktop/back-up/function_details/existing_bots/bots\va_windows_utility_helper.py

## Environments
Python 3.12.5
Pyarmor 9.0.5 (trial), 000000, non-profits
Platform windows.x86_64
Native windows.amd64
Home D:\samartha.khare\.pyarmor

## Traceback
Traceback (most recent call last):
  File "D:\samartha.khare\AppData\Local\Programs\Python\Python312\Lib\site-packages\pyarmor\cli\__main__.py", line 785, in main
    main_entry(sys.argv[1:])
  File "D:\samartha.khare\AppData\Local\Programs\Python\Python312\Lib\site-packages\pyarmor\cli\__main__.py", line 778, in main_entry
    return args.func(ctx, args)
           ^^^^^^^^^^^^^^^^^^^^
  File "D:\samartha.khare\AppData\Local\Programs\Python\Python312\Lib\site-packages\pyarmor\cli\__main__.py", line 245, in cmd_gen
    builder.process(options)
  File "D:\samartha.khare\AppData\Local\Programs\Python\Python312\Lib\site-packages\pyarmor\cli\generate.py", line 188, in process
    self._obfuscate_scripts()
  File "D:\samartha.khare\AppData\Local\Programs\Python\Python312\Lib\site-packages\pyarmor\cli\generate.py", line 144, in _obfuscate_scripts
    code = Pytransform3.generate_obfuscated_script(self.ctx, r)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\samartha.khare\AppData\Local\Programs\Python\Python312\Lib\site-packages\pyarmor\cli\core\__init__.py", line 95, in generate_obfuscated_script
    return m.generate_obfuscated_script(ctx, res)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<maker>", line 716, in generate_obfuscated_script
  File "D:\samartha.khare\AppData\Local\Programs\Python\Python312\Lib\site-packages\pyarmor\cli\__init__.py", line 16, in process
    return meth(self, res, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<maker>", line 515, in process
  File "D:\samartha.khare\AppData\Local\Programs\Python\Python312\Lib\site-packages\pyarmor\cli\resource.py", line 144, in reparse
    self.mtree = ast.parse(''.join(lines), self.frozenname, 'exec')
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\samartha.khare\AppData\Local\Programs\Python\Python312\Lib\ast.py", line 52, in parse
    return compile(source, filename, mode, flags,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen va_windows_utility_helper>", line 484
    command = f"$patchName = '{patch_name_filter}'
              ^
SyntaxError: unterminated f-string literal (detected at line 484)


